# wasmer-patch

./: Cargo.toml  README.md
src/js/: import_object.rs  instance.rs  mod.rs  module.rs  resolver.rs
