[package]
name = "wasmer"
version = "2.0.0"
description = "High-performance WebAssembly runtime"
categories = ["wasm"]
keywords = ["wasm", "webassembly", "runtime", "vm"]
authors = ["Wasmer Engineering Team <engineering@wasmer.io>"]
repository = "https://github.com/wasmerio/wasmer"
license = "MIT"
readme = "README.md"
edition = "2018"


[dependencies]
indexmap = { version = "1.6", features = ["serde-1"] }
cfg-if = "1.0"
thiserror = "1.0"
more-asserts = "0.2"
wat = { version = "1.0", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]

# - Mandatory dependencies for `js`.
wasmer-types = { path = "lib/types", version = "2.0.0", default-features = false, features = ["std"] }
wasm-bindgen = "0.2.74"
wasm-bindgen-futures = "0.4.25"
js-sys = "0.3.51"
wasmer-derive = { version = "2.0.0" }

# - Optional dependencies for `js`.
wasmparser = { version = "0.78", default-features = false, optional = true }
hashbrown = { version = "0.11", optional = true }

[badges]
maintenance = { status = "actively-developed" }

[features]
std = []
core = ["hashbrown"]

# Features for `js`.
js = []
js-default = ["js", "std", "wasm-types-polyfill"]

wasm-types-polyfill = ["js", "wasmparser"]

[workspace]
members = ["lib/types"]
